# sfml-tut

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: bullet.cpp  constants.cpp  player.cpp  playerBullets.cpp
src/docs/: runningThoughts.md
src/include/: bullet.h  constants.h  player.h  playerBullets.h
